# hirschgarten-unsynced-scala-repro

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
test/com/acme/synced/: BUILD.bazel  NormallySyncedTest.scala
test/com/acme/unsynced/: UnsyncedTest.scala
tools/: BUILD.bazel  fake_scala_rules.bzl
